--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "mongoose": "^5.9.2",
     "mysql": "^2.18.1"
   }
 }
