--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.0",
     "mongoose": "^5.9.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "xlsx": "^0.15.6"
   }
 }
